# QPELightCurves

./: .gitignore  README.md  download_arfs.py  pyproject.toml
examples/: quick_tutorial.ipynb
src/: __init__.py  detectorfold.py  luminosity.py  utils.py
