[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qpecurves"
version = "0.0.1a"
description = "Generate luminosity and count-rates for QPEs under the EMRI hypothesis."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "kerrgeopy"
]

[tool.setuptools]
package-dir = {"qpecurves" = "src"}
